--- a/index.html
+++ b/index.html
@@ -66,71 +66,6 @@
 
 		<div class="container">
 			<ul class="catalog">
-
-				<li class="card">
-					<img class="card__image" src="img/temp.jpg" alt="test">
-					<div class="card__description">
-						<h3 class="card__header">Тестовая карточка</h3>
-						<div class="card__price">4000 ₽</div>
-					</div>
-				</li>
-				<li class="card">
-					<img class="card__image" src="img/temp.jpg" alt="test">
-					<div class="card__description">
-						<h3 class="card__header">Тестовая карточка</h3>
-						<div class="card__price">4000 ₽</div>
-					</div>
-				</li>
-				<li class="card">
-					<img class="card__image" src="img/temp.jpg" alt="test">
-					<div class="card__description">
-						<h3 class="card__header">Тестовая карточка</h3>
-						<div class="card__price">4000 ₽</div>
-					</div>
-				</li>
-				<li class="card">
-					<img class="card__image" src="img/temp.jpg" alt="test">
-					<div class="card__description">
-						<h3 class="card__header">Тестовая карточка</h3>
-						<div class="card__price">4000 ₽</div>
-					</div>
-				</li>
-				<li class="card">
-					<img class="card__image" src="img/temp.jpg" alt="test">
-					<div class="card__description">
-						<h3 class="card__header">Тестовая карточка</h3>
-						<div class="card__price">4000 ₽</div>
-					</div>
-				</li>
-				<li class="card">
-					<img class="card__image" src="img/temp.jpg" alt="test">
-					<div class="card__description">
-						<h3 class="card__header">Тестовая карточка</h3>
-						<div class="card__price">4000 ₽</div>
-					</div>
-				</li>
-				<li class="card">
-					<img class="card__image" src="img/temp.jpg" alt="test">
-					<div class="card__description">
-						<h3 class="card__header">Тестовая карточка</h3>
-						<div class="card__price">4000 ₽</div>
-					</div>
-				</li>
-				<li class="card">
-					<img class="card__image" src="img/temp.jpg" alt="test">
-					<div class="card__description">
-						<h3 class="card__header">Тестовая карточка</h3>
-						<div class="card__price">4000 ₽</div>
-					</div>
-				</li>
-				<li class="card">
-					<img class="card__image" src="img/temp.jpg" alt="test">
-					<div class="card__description">
-						<h3 class="card__header">Тестовая карточка</h3>
-						<div class="card__price">4000 ₽</div>
-					</div>
-				</li>
-
 			</ul>
 		</div>
 
@@ -203,7 +138,7 @@
 					<p>Описание:
 						<span class="modal__description-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, aut deleniti dolores ex explicabo fugit hic?</span>
 					</p>
-					<p>Цена: <span class="modal__cost-item">4000 ₽</span></p>
+					<p>Цена: <span class="modal__cost-item">4000 <span>₽</span></span></p>
 					<button class="btn">Купить</button>
 				</div>
 			</div>
